Update index.html - minor change

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     .inline-checkbox input[type="checkbox"] { margin: 0; }
     .slider-label { display: flex; align-items: center; gap: 6px; }
     #reset-btn, #update-btn {
-      margin-top: 4px; width: 100%; padding: 7px; font-size: 12px;
+      margin-top: 3px; width: 100%; padding: 7px; font-size: 12px;
       background: #2C3E83; color: white; border: none; border-radius: 4px; cursor: pointer;
     }
     #info-icon {
@@ -212,8 +212,8 @@
       <div id="info-icon" style="display:inline-block;">i</div>
       <div id="info-text">The suitability index is the result of factors in which weighting are applied. Normalisation sums up to 100%</div>
     </button>
-    <button id="ai-suggest-btn" type="button" style="margin-top: 4px; width: 100%; padding: 7px; font-size: 12px; background: #2C3E83; color: white; border: none; border-radius: 4px; cursor: pointer;">
-  🤖 AI Suggests Optimal Area
+    <button id="ai-suggest-btn" type="button" style="margin-top: 3px; width: 100%; padding: 7px; font-size: 12px; background: #2C3E83; color: white; border: none; border-radius: 4px; cursor: pointer;">
+  🤖 AI suggested optimal area
 </button>
     
     <div class="control-row">
