--- a/index.html
+++ b/index.html
@@ -11,99 +11,249 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet-control-geocoder@2.4.0/dist/Control.Geocoder.css" />
 
 
-  <style>
-    html, body {
-      width: 100%; height: 100%; margin: 0; padding: 0;
-      font-family: sans-serif;
-      background: #eee;
-      overflow: hidden;
-    }
-    #header-container {
-      position: absolute; top: 0; left: 0; right: 0; height: 36px;
-      background: white; display: flex; align-items: center; padding: 0 15px;
-      z-index: 1200; user-select: none;
-    }
-    #logo { height: 32px; margin-right: 15px; }
-    #page-title { font-size: 16px; font-weight: 700; color: #2C3E83; }
-    #map {
-      position: absolute; top: 36px; left: 0; right: 0; bottom: 0;
-      z-index: 0; background: #eee;
-    }
-    .control-box {
-      position: fixed; /* Changed from 'absolute' to 'fixed' */
-      top: 40px;
-      left: 5px;
-      width: 320px;
-      max-height: calc(100vh - 50px); /* This will make it scrollable if it's too tall */
-      overflow-y: auto; /* Adds a scrollbar if content overflows */
-      background: rgba(255, 255, 255, 0.85);
-      padding: 10px 12px 15px 12px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-      z-index: 1100;
-      font-size: 12px;
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .control-box-title { font-size: 14px; font-weight: bold; margin-bottom: 5px; color: #2C3E83; }
-    .control-row { display: flex; align-items: center; gap: 8px; }
-    .layer-toggle { cursor: pointer; width: 12px; height: 12px; margin-left: 8px; }
-    .inline-checkbox { display: flex; align-items: center; gap: 6px; font-size: 13px; cursor: pointer; } /* REMOVED FONT-WEIGHT: 600 */
-    .inline-checkbox input[type="checkbox"] { margin: 0; }
-    .slider-label { display: flex; align-items: center; gap: 6px; }
-    #reset-btn, #update-btn {
-      margin-top: 3px; width: 100%; padding: 7px; font-size: 12px;
-      background: #2C3E83; color: white; border: none; border-radius: 4px; cursor: pointer;
-    }
-    #info-icon {
-      position: absolute; top: 50%; right: 5px; transform: translateY(-50%);
-      width: 18px; height: 18px; border-radius: 50%; background: white; color: black;
-      font-weight: bold; text-align: center; line-height: 18px; font-size: 12px; cursor: pointer;
-    }
-    #info-text {
-      position: absolute; bottom: 100%; right: 0; margin-bottom: 8px; width: 230px;
-      background: white; border: 1px solid #ccc; padding: 7px 8px; font-size: 12px;
-      border-radius: 4px; box-shadow: 0 0 5px rgba(0,0,0,0.2);
-      display: none; z-index: 1150; user-select: none; color: #222; line-height: 1.3;
-    }
-    #transparency-label { margin-top: 10px; user-select: none; }
-    #percent-fitness, #percent-ov, #percent-pop, #percent-transparency { margin-left: 4px; font-weight: 600; }
-    #toggle-menu-btn {
-      position: absolute;
-      top: 40px;
-      left: 5px;
-      background: rgba(255,255,255,0.75);
-      padding: 10px 15px;
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0,0,0,0.3);
-      z-index: 1150;
-      font-size: 13px;
-      cursor: pointer;
-      user-select: none;
-      display: none;
-      width: 160px;
-      text-align: center;
-    }
-    #close-menu-btn { margin-top: 4px; }
-    .legend {
-      position: absolute; bottom: 10px; left: 5px; padding: 8px 12px; background: rgba(255,255,255,0.75);
-      font-size: 12px; border-radius: 6px; box-shadow: 0 0 5px rgba(0,0,0,0.3);
-      z-index: 1100; width: 180px; user-select: none;
-    }
-    .legend-title { font-weight: bold; margin-bottom: 7px; text-align: center; }
-    .legend-scale { display: flex; height: 16px; border-radius: 4px; overflow: hidden; margin-bottom: 4px; }
-    .color-box { flex: 1; height: 16px; }
-    .legend-labels { display: flex; justify-content: space-between; }
-    .legend-info { font-size: 11px; color: #444; margin-top: 4px; line-height: 1.3; display: none; }
-    #legend-info-toggle {
-      position: absolute; top: 8px; left: 8px; width: 20px; height: 20px; background: none; color: #333;
-      border-radius: 50%; font-weight: bold; font-size: 14px; text-align: center; line-height: 20px; cursor: pointer; z-index: 1200;
-    }
-    #legend-toggle {
-      position: absolute; top: 6px; right: 6px; width: 20px; height: 14px; background: #eee; color: #333;
-      border-radius: 3px; font-weight: bold; font-size: 16px; text-align: center; line-height: 20px; cursor: pointer; z-index: 1200;
-    }
+<style>
+  html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+    background: #eee;
+    overflow: hidden;
+  }
+
+  #header-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 36px;
+    background: white;
+    display: flex;
+    align-items: center;
+    padding: 0 15px;
+    z-index: 1200;
+    user-select: none;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+  #logo {
+    height: 32px;
+    margin-right: 15px;
+  }
+
+  #page-title {
+    font-size: 16px;
+    font-weight: 700;
+    color: #2C3E83;
+  }
+
+  #map {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 0;
+    background: #eee;
+  }
+
+  .control-box {
+    position: fixed;
+    top: 46px; /* Starts below the header, with a small 10px gap */
+    left: 10px;
+    width: 320px;
+    max-height: calc(100vh - 66px); /* Adjusted to fit within viewport with margins */
+    overflow-y: auto;
+    background: rgba(255, 255, 255, 0.95); /* Slightly less transparent */
+    padding: 10px 12px 15px 12px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    z-index: 1100;
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    box-sizing: border-box;
+  }
+
+  .control-box-title {
+    font-size: 14px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #2C3E83;
+    text-align: center;
+  }
+
+  .control-row {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+  }
+
+  .layer-toggle {
+    cursor: pointer;
+    width: 12px;
+    height: 12px;
+    margin-left: 8px;
+  }
+
+  .inline-checkbox {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    font-size: 13px;
+    cursor: pointer;
+  }
+
+  .inline-checkbox input[type="checkbox"] {
+    margin: 0;
+  }
+
+  .slider-label {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+  }
+
+  #reset-btn, #update-btn, #ai-suggest-btn {
+    width: 100%;
+    padding: 8px;
+    font-size: 12px;
+    background: #2C3E83;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+  }
+
+  #reset-btn:hover, #update-btn:hover, #ai-suggest-btn:hover {
+    background-color: #3e5095;
+  }
+
+  #info-icon {
+    position: relative;
+    width: 18px;
+    height: 18px;
+    border-radius: 50%;
+    background: white;
+    color: black;
+    font-weight: bold;
+    text-align: center;
+    line-height: 18px;
+    font-size: 12px;
+    cursor: pointer;
+    left: 4px;
+  }
+
+  #info-text {
+    position: absolute;
+    bottom: 100%;
+    right: 0;
+    margin-bottom: 8px;
+    width: 230px;
+    background: white;
+    border: 1px solid #ccc;
+    padding: 7px 8px;
+    font-size: 12px;
+    border-radius: 4px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    display: none;
+    z-index: 1150;
+    user-select: none;
+    color: #222;
+    line-height: 1.3;
+  }
+
+  #transparency-label {
+    margin-top: 10px;
+    user-select: none;
+  }
+
+  #percent-fitness, #percent-ov, #percent-pop, #percent-transparency {
+    margin-left: 4px;
+    font-weight: 600;
+  }
+
+  .legend {
+    margin-top: 15px; /* Added spacing from the search box */
+    padding: 8px 12px;
+    background: rgba(255, 255, 255, 0.75);
+    font-size: 12px;
+    border-radius: 6px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+    width: 100%;
+    user-select: none;
+    box-sizing: border-box;
+    position: relative;
+  }
+
+  .legend-title {
+    font-weight: bold;
+    margin-bottom: 7px;
+    text-align: center;
+  }
+
+  .legend-scale {
+    display: flex;
+    height: 16px;
+    border-radius: 4px;
+    overflow: hidden;
+    margin-bottom: 4px;
+  }
+
+  .color-box {
+    flex: 1;
+    height: 16px;
+  }
+
+  .legend-labels {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .legend-info {
+    font-size: 11px;
+    color: #444;
+    margin-top: 4px;
+    line-height: 1.3;
+    display: none;
+  }
+
+  #legend-info-toggle {
+    position: absolute;
+    top: 8px;
+    left: 8px;
+    width: 20px;
+    height: 20px;
+    background: none;
+    color: #333;
+    border-radius: 50%;
+    font-weight: bold;
+    font-size: 14px;
+    text-align: center;
+    line-height: 20px;
+    cursor: pointer;
+    z-index: 1200;
+  }
+
+  #legend-toggle {
+    position: absolute;
+    top: 6px;
+    right: 6px;
+    width: 20px;
+    height: 14px;
+    background: #eee;
+    color: #333;
+    border-radius: 3px;
+    font-weight: bold;
+    font-size: 16px;
+    text-align: center;
+    line-height: 20px;
+    cursor: pointer;
+    z-index: 1200;
+  }
     /* Leaflet Draw icons fix */
     .leaflet-div-icon.leaflet-editing-icon,
     .leaflet-div-icon.leaflet-draw-edit-edit,
@@ -200,7 +350,7 @@
       background-color: #f0f0f0;
     }
 
-  </style>
+ </style>
 </head>
 <body>
   <div id="header-container">
@@ -288,36 +438,37 @@
         </div>
       </div>
     </div>
+    <div class="legend" id="legend">
+      <div id="legend-info-toggle" title="The suitability index is the result of factors in which weightings are applied. 0 = not suitable | 10 = highly suitable">ℹ️</div>
+      <div id="legend-toggle" title="Toggle legend">−</div>
+      <div class="legend-title">Legend</div>
+      <div class="legend-header" style="display: flex; justify-content: space-between; align-items: center;">
+        <span class="legend-title">Suitability index</span>
+      </div>
+      <div class="legend-scale">
+        <div class="color-box" style="background:#d73027"></div>
+        <div class="color-box" style="background:#f46d43"></div>
+        <div class="color-box" style="background:#fdae61"></div>
+        <div class="color-box" style="background:#fee08b"></div>
+        <div class="color-box" style="background:#d9ef8b"></div>
+        <div class="color-box" style="background:#a6d96a"></div>
+        <div class="color-box" style="background:#1a9641"></div>
+      </div>
+      <div class="legend-labels">
+        <span>0</span><span>10</span>
+      </div>
+      <div class="legend-info" id="legend-info">
+        The suitability index is the result of factors in which weightings are applied. 0 = not suitable | 10 = highly suitable
+      </div>
+    </div>
   </div>
   
-  <div class="legend" id="legend">
-    <div id="legend-info-toggle" title="The suitability index is the result of factors in which weightings are applied. 0 = not suitable | 10 = highly suitable">ℹ️</div>
-    <div id="legend-toggle" title="Toggle legend">−</div>
-    <div class="legend-title">Legend</div>
-    <div class="legend-header" style="display: flex; justify-content: space-between; align-items: center;">
-      <span class="legend-title">Suitability index</span>
-    </div>
-    <div class="legend-scale">
-      <div class="color-box" style="background:#d73027"></div>
-      <div class="color-box" style="background:#f46d43"></div>
-      <div class="color-box" style="background:#fdae61"></div>
-      <div class="color-box" style="background:#fee08b"></div>
-      <div class="color-box" style="background:#d9ef8b"></div>
-      <div class="color-box" style="background:#a6d96a"></div>
-      <div class="color-box" style="background:#1a9641"></div>
-    </div>
-    <div class="legend-labels">
-      <span>0</span><span>10</span>
-    </div>
-    <div class="legend-info" id="legend-info">
-      The suitability index is the result of factors in which weightings are applied. 0 = not suitable | 10 = highly suitable
-    </div>
-  </div>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/leaflet-draw@1.0.4/dist/leaflet.draw.js"></script>
   <script src="https://unpkg.com/@turf/turf@6.5.0/turf.min.js"></script>
   <script src="https://unpkg.com/leaflet-control-geocoder@2.4.0/dist/Control.Geocoder.js"></script>
   <script>
+    
     // MAP INITIALISATIE
     function getCenterCoords() {
       return window.innerWidth <= 768 ? [52.10, 5.10] : [52.09, 5.42];
