--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   #header-container {
       position: absolute;
       top: 0;
-      left: 320px; /* Aligned to the right of the control box */
+      left: 0; /* Aligned to the right of the control box */
       right: 0;
       height: 36px;
       background: white;
@@ -59,7 +59,7 @@
 
   .control-box {
     position: fixed;
-    top: 0;
+    top: 36px;
       left: 0;
       bottom: 0;
       width: 320px;
@@ -238,22 +238,6 @@
     z-index: 1200;
   }
 
-  #legend-toggle {
-    position: absolute;
-    top: 6px;
-    right: 6px;
-    width: 20px;
-    height: 14px;
-    background: #eee;
-    color: #333;
-    border-radius: 3px;
-    font-weight: bold;
-    font-size: 16px;
-    text-align: center;
-    line-height: 20px;
-    cursor: pointer;
-    z-index: 1200;
-  }
     /* Leaflet Draw icons fix */
     .leaflet-div-icon.leaflet-editing-icon,
     .leaflet-div-icon.leaflet-draw-edit-edit,
@@ -440,7 +424,6 @@
     </div>
     <div class="legend" id="legend">
       <div id="legend-info-toggle" title="The suitability index is the result of factors in which weightings are applied. 0 = not suitable | 10 = highly suitable">ℹ️</div>
-      <div id="legend-toggle" title="Toggle legend">−</div>
       <div class="legend-title">Legend</div>
       <div class="legend-header" style="display: flex; justify-content: space-between; align-items: center;">
         <span class="legend-title">Suitability index</span>
@@ -776,14 +759,6 @@
       const info = document.getElementById('legend-info');
       info.style.display = info.style.display === 'none' ? 'block' : 'none';
       this.title = info.style.display === 'block' ? 'Hide info' : 'Show info';
-    };
-    document.getElementById('legend-toggle').onclick = function () {
-      const legend = document.getElementById('legend');
-      if (legend.style.height === '30px') {
-        legend.style.height = ''; this.textContent = '−'; this.title = 'Toggle legend';
-      } else {
-        legend.style.height = '30px'; this.textContent = '+'; this.title = 'Show full legend';
-      }
     };
 
     // TEKENEN EN SELECTIE
