--- a/index.html
+++ b/index.html
@@ -453,23 +453,16 @@
   <script>
     
     // MAP INITIALISATIE
-    function getCenterCoords() {
-      return window.innerWidth <= 768 ? [52.10, 5.10] : [52.09, 5.42];
-    }
     const map = L.map('map', {
       zoomControl: false,
-      minZoom: 11,
-      maxZoom: 18,
-      maxBounds: [[51.90, 4.75], [52.28, 5.35]],
-      maxBoundsViscosity: 1.0,
       zoomSnap: 0.5,
       zoomDelta: 0.5
-    }).setView(getCenterCoords(), 12);
-    map.setZoom(map.getZoom() - 0.5);
+    }).setView([52.1326, 5.2913], 7); // Set initial view to a central point in NL
     L.control.zoom({ position: 'topright' }).addTo(map);
     L.control.scale({ position: 'bottomright' }).addTo(map);
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap contributors'
+
+    L.tileLayer('https://{s}.basemaps.cartocdn.com/rastertiles/voyager/{z}/{x}/{y}{r}.png', {
+      attribution: '© <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors © <a href="https://carto.com/attributions">CARTO</a>'
     }).addTo(map);
 
     // KAART-LAGEN EN ICONS
@@ -640,30 +633,30 @@
 
     // GEMEENTEKAART
     let gemeentekaartLayer = null; 
-    let utrechtPolygon = null; // Variable to store the Utrecht polygon for search filtering
 
-    fetch('https://raw.githubusercontent.com/geosenso92/fitness-locator-map/main/data/gemkaart24.json')
+    // Load and style the new Dutch municipalities layer
+    fetch('data/gem_mapNL.geojson')
       .then(r => r.json())
       .then(data => {
-        // Find and store the Utrecht polygon separately
         const utrechtFeature = data.features.find(f => f.properties.gemeentenaam === "Utrecht");
         if (utrechtFeature) {
             utrechtPolygon = utrechtFeature;
         }
 
-        // Add ALL municipalities to the displayed layer
         gemeentekaartLayer = L.geoJSON(data, {
           style: { color: "#555", weight: 1, fillColor: "#f7f7f7", fillOpacity: 0.3 },
           onEachFeature: (f, layer) => {
             layer.bindTooltip(f.properties.gemeentenaam, { sticky: true });
             layer.on({
               mouseover: e => { e.target.setStyle({ weight: 2, color: '#000', fillOpacity: 0.5 }); e.target.openTooltip(); },
-              mouseout: e => { layer.setStyle({ color: "#555", weight: 1, fillColor: "#f7f7f7", fillOpacity: 0.3 }); e.target.closeTooltip(); }
+              mouseout: e => { gemeentekaartLayer.resetStyle(e.target); e.target.closeTooltip(); }
             });
           }
         }).addTo(map);
-      });
 
+        // Zoom to the bounds of the entire layer once it's loaded
+        map.fitBounds(gemeentekaartLayer.getBounds());
+      });
     // SLIDERS EN BUTTONS
     function updatePercentDisplay(idRange, idPercent) {
       const range = document.getElementById(idRange);
