Update index.html - check new adreszoeker

--- a/index.html
+++ b/index.html
@@ -976,18 +976,17 @@ fetch('data/Gem_mapNL.geojson')
 const addressSearchInput = document.getElementById('address-search-input');
 const searchAddressBtn = document.getElementById('search-address-btn');
 const searchResultsDiv = document.getElementById('search-results');
+const clearSearchBtn = document.getElementById('clear-search-btn');
+
 let searchMarker = null; // To hold the marker for the searched address
 
+// Event listeners for the search functionality
 searchAddressBtn.addEventListener('click', performAddressSearch);
 addressSearchInput.addEventListener('keypress', function(e) {
     if (e.key === 'Enter') {
         performAddressSearch();
     }
 });
-
-const clearSearchBtn = document.getElementById('clear-search-btn'); // Get the new button
-
-// Add event listener for the new "Clear Search" button
 clearSearchBtn.addEventListener('click', clearAddressSearch);
 
 // Function to clear the address search results and the marker
@@ -1047,36 +1046,33 @@ function displaySearchResults(results) {
         return;
     }
 
+    const header = document.createElement('p');
+    header.innerHTML = `<strong>Found ${results.length} result(s):</strong>`;
+    searchResultsDiv.appendChild(header);
+
     results.forEach(result => {
         const resultItem = document.createElement('div');
         resultItem.classList.add('search-result-item');
         resultItem.textContent = result.name;
         resultItem.title = 'Click to view on map';
         resultItem.onclick = () => {
-            // Clear previous search marker before adding a new one
             if (searchMarker) {
                 map.removeLayer(searchMarker);
             }
             searchMarker = L.marker(result.latlng).addTo(map)
                 .bindPopup(`<b>${result.name}</b>`).openPopup();
             
-            // Try to fit bounds, if available, otherwise just pan to the point
             if (result.bounds && result.bounds.length === 4) {
                 const southWest = L.latLng(parseFloat(result.bounds[0]), parseFloat(result.bounds[2]));
                 const northEast = L.latLng(parseFloat(result.bounds[1]), parseFloat(result.bounds[3]));
                 map.fitBounds(L.latLngBounds(southWest, northEast), { padding: [50, 50] });
             } else {
-                map.setView(result.latlng, 16); // Default zoom level if no bounds
+                map.setView(result.latlng, 16);
             }
         };
         searchResultsDiv.appendChild(resultItem);
     });
-    searchResultsDiv.prepend(document.createElement('hr')); // Separator
-    const header = document.createElement('p');
-    header.innerHTML = `<strong>Found ${results.length} result(s):</strong>`;
-    searchResultsDiv.prepend(header);
 }
-
 document.querySelectorAll('.locked-label').forEach(label => {
   label.addEventListener('click', function (e) {
     e.preventDefault();
